[ FITZ - 55 ] - Fix form input and control border color

--- a/resources/sass/_extend-bootstrap.scss
+++ b/resources/sass/_extend-bootstrap.scss
@@ -24,6 +24,10 @@
     width: 100%;
     object-fit: cover;
 }
+.form-check-input,
+.form-control {
+    border-color: #212529;
+}
 
 .fixed-top {
     position: static;
