--- a/resources/sass/support.scss
+++ b/resources/sass/support.scss
@@ -1,4 +1,5 @@
 .support-content-block-component h2 {
-    font-size: 26px;
+    font-size: 36px;
     font-weight: 500;
+    margin-bottom: 12px;
 }
