--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -871,6 +871,10 @@ a.text-center.btn.btn-outline-light.btn__book {
     width: 100%;
 }
 
+[data-component="card"]:hover {
+    cursor: pointer;
+}
+
 .container-home-cards h3 {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
