feat: new layout cards heading font-weight

--- a/resources/sass/support-us/_grid.scss
+++ b/resources/sass/support-us/_grid.scss
@@ -67,6 +67,11 @@
     padding-left: 0;
 }
 
+.support .card-fitz .card-body a,
+.support .card-body h2 {
+    font-weight: 800;
+}
+
 .card-fitz-support .card-body .contents-label h3 {
     font-size: 20px;
     font-style: normal;
