Fix font weight for promo page heading

--- a/resources/sass/support-us/_grid.scss
+++ b/resources/sass/support-us/_grid.scss
@@ -73,4 +73,9 @@
     font-weight: 500;
 }
 
+.promo-page .contents-label h2,
+.promo-page .contents-label h2 a {
+    font-weight: 600;
+}
+
 /* support-grid-card end */
