--- a/resources/sass/support-us/_grid.scss
+++ b/resources/sass/support-us/_grid.scss
@@ -76,6 +76,7 @@
 .promo-page .contents-label h2,
 .promo-page .contents-label h2 a {
     font-weight: 600;
+    font-size: 20px;
 }
 
 /* support-grid-card end */
