promo pages heading

--- a/resources/sass/support-us/_grid.scss
+++ b/resources/sass/support-us/_grid.scss
@@ -67,4 +67,10 @@
     padding-left: 0;
 }
 
+.promo-page .contents-label h2,
+.promo-page .contents-label h2 a {
+    font-weight: 600;
+    font-size: 20px;
+}
+
 /* support-grid-card end */
