add: Rise up exhibition hero styles

--- a/resources/sass/exhibition/_hero.scss
+++ b/resources/sass/exhibition/_hero.scss
@@ -10,3 +10,14 @@
 .navbar:has(#global-announcement) + .exhibition-hero + .breadcrumbs-su {
     margin: 0;
 }
+
+@media screen and ( min-width: 800px ) {
+    .home-hero .addon.rise-up {
+        align-items: flex-start;
+        margin-top: 200px;
+    }
+    
+    .wrapper.rise-up {
+        align-items: flex-end;
+    }
+}
