--- a/resources/sass/exhibition/_related-events.scss
+++ b/resources/sass/exhibition/_related-events.scss
@@ -4,7 +4,7 @@
     padding: 28px;
 
     @media screen and (min-width: 845px) {
-        margin: 0 auto;
+        margin: 56px auto;
         max-width: 800px;
     }
     &-title {
