--- a/resources/sass/support-us/_image-gallery.scss
+++ b/resources/sass/support-us/_image-gallery.scss
@@ -38,6 +38,7 @@ figcaption {
 }
 
 .image-gallery .collection-carousel button.splide__arrow {
+  border-radius: 0;
   svg {
     height: auto;
     width: auto;
