--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -2,12 +2,12 @@
     background: black;
     border: none;
     display: flex;
-    position: absolute;
     left: 0;
     margin: 0;
-    min-height: 100%;
     padding: 40px 16px;
+    position: fixed;
     width: 100%;
+    z-index: 1000;
 }
 
 .main-search-wrapper {
