--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -46,7 +46,7 @@
 }
 
 .main-search-input:focus,
-.main-search-input:focus-visable {
+.main-search-input:focus-visible {
     outline: 2px solid #4d90fe;
 }
 
