--- a/resources/sass/_nav.scss
+++ b/resources/sass/_nav.scss
@@ -5,9 +5,15 @@
     position: absolute;
     left: 0;
     margin: 0;
-    min-height: 100%;
     padding: 40px 16px;
     width: 100%;
+    top: 80px;
+
+    @media screen and (max-width: 991px) {
+       .navbar .container-fluid:has(.navbar-collapse.collapse.show) & {
+            top: 475px;
+        }
+    }
 }
 
 .main-search-wrapper {
