--- a/resources/sass/support-us/_nav.scss
+++ b/resources/sass/support-us/_nav.scss
@@ -5,41 +5,87 @@
 .navbar {
     padding: 0.7rem 0;
 }
+
+.navbar-nav {
+    margin-block-start: 16px;
+    @media screen and (min-width: 992px) {
+        margin-block-start: 0;
+    }
+}
+
 .navbar .container-fluid {
-    max-width: 1290px;
-    height: 100%;
+    isolation: isolate;
+    position: relative;
 
     @media screen and (min-width: 1320px) {
         padding: 0;
     }
+}
+.navbar .container-fluid-inner {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    margin: 0 auto;
+    max-width: 1290px;
+    width: 100%;
+
+
+    & .navbar-brand,
+    & .donate-container {
+        grid-column: 1/-1;
+        grid-row: 1/2;
+        max-width: fit-content;
+    }
+
+    & .navbar-toggler {
+        grid-row: 1/2;
+    }
+
+    @media screen and (min-width: 992px) {
+        .collapse.navbar-collapse {
+            grid-row: 1/2;
+            grid-column: 1/-1;
+            justify-self: center;
+            margin-inline-start: -42px;
+            margin-inline-end: 42px;
+        }
+    }
+
 }
 
 .navbar:has(#global-announcement) .container-fluid {
     padding-top: 12px;
 }
 
-@media screen and (min-width: 992px) {
-    .collapse.navbar-collapse {
-        justify-content: center;
-    }
-}
-
 .donate-container {
-    margin-left: auto;
-    opacity: 0;
     align-self: stretch;
-    margin-top: -8px;
-    margin-bottom: -8px;
+    align-items: baseline;
     display: flex;
     gap: 20px;
-    align-items: baseline;
+    margin-bottom: -8px;
+    margin-left: auto;
+    margin-top: -8px;
+    margin-right: 16px;
     transition: opacity 3s linear;
+    z-index: 999;
+
+    @media screen and (min-width: 992px) {
+        margin-right: 0;
+    }
 }
 
 .donate-container a.nav-link,
 .donate-container a.nav-link:hover,
 .donate-container a.nav-link:focus {
+    align-items: center;
     color: white;
+    display: flex;
+    font-size: 18px;
+    font-weight: 500;
+    height: 100%;
+    justify-content: center;
+    padding: 0 28px;
+    width: 100%;
 }
 
 @media screen and (min-width: 992px) {
@@ -53,12 +99,14 @@
     color: white;
     display: inline-flex;
     align-items: center;
-    height: 108%;
-    padding: 0 28px;
     margin: -4px 0;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
+    height: 93px;
 }
 
+#main-search {
+    display: none;
+    &[data-item-expanded="true"] {
+        display: block;
+    }
+}
 /* navigation end */
