cta additional url changes add

--- a/resources/sass/exhibition/_cta.scss
+++ b/resources/sass/exhibition/_cta.scss
@@ -67,6 +67,15 @@
     text-decoration: underline;
 }
 
+.exhibition-cta-link--egypt {
+    text-decoration: none;
+}
+
+.exhibition-cta-link--egypt a {
+    text-decoration: underline;
+    color: #000;
+}
+
 // Promo CTA - Exhibition Single Page
 .exhibition-text-component .exhibition-cta--promo {
     background-color: #b50e5e;
