FMAA-2: refactor card components for improved structure and styling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,7 @@
 @import "~bootstrap/scss/utilities/api";
 @import "support";
 @import "_nav";
+@import "_cards";
 
 @import 'support-us/_support-us';
 @import "exhibition/exhibition";
