--- a/resources/sass/_cards.scss
+++ b/resources/sass/_cards.scss
@@ -85,6 +85,7 @@
 
 
 .card__heading {
+    background-color: white;
 	font-size: clamp(1.25rem, 1.125rem + 0.625vw, 1.5625rem);
     line-height: 1.3;
     padding: 16px;
@@ -108,6 +109,7 @@
 .card__text .text-dark {
     display: inline-block;
     padding: 16px;
+    padding-block-end: 0;
     margin-block-end: 0;
     margin-block-start: 0;
 }
