--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -126,6 +126,10 @@ a.share {
     text-decoration: underline;
 }
 
+.share-icons a {
+    text-decoration: none;
+}
+
 @media (max-width: 440px) {
     .shorten-words {
         max-width: 300px;
