--- a/resources/sass/_cards.scss
+++ b/resources/sass/_cards.scss
@@ -68,6 +68,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+    padding: 16px 16px 32px 16px;
 
 	& > * + * {
 		margin-block-start: 1em;
@@ -88,7 +89,6 @@
     background-color: white;
 	font-size: clamp(1.25rem, 1.125rem + 0.625vw, 1.5625rem);
     line-height: 1.3;
-    padding: 16px;
     margin-block-start: 0;
     margin-block-end: 0;
 }
@@ -108,7 +108,7 @@
 
 .card__text .text-dark {
     display: inline-block;
-    padding: 16px;
+    padding: 16px 0;
     padding-block-end: 0;
     margin-block-end: 0;
     margin-block-start: 0;
