Add panorama title to panorama and give the panorama an aria-labelledby

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -161,6 +161,10 @@ a.share {
     height: 500px;
 }
 
+#panorama:focus {
+    outline: 2px solid white;
+}
+
 .floor-plans > li {
     list-style: none;
 }
