Build out example page with new exhibition detail

--- a/resources/sass/exhibition/exhibition.scss
+++ b/resources/sass/exhibition/exhibition.scss
@@ -1,3 +1,7 @@
 @import "_hero";
+@import "_hero-2025";
 @import '_cta';
 @import '_related-events.scss';
+@import '_text-component.scss';
+@import '_details-component.scss';
+@import '_quote.scss';
