--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -1,2 +1,13 @@
 @import "_hero";
 @import "_museum-information";
+@import "_getting-here";
+@import "_accordion-section";
+
+.fifty-fifty--background {
+    background-color: #F4F3F0;
+    padding-block: 60px;
+
+    .container h2 {
+        font-size: 34px;
+    }
+}
