Create events carousel

--- a/resources/sass/visit-us/_hero.scss
+++ b/resources/sass/visit-us/_hero.scss
@@ -8,6 +8,7 @@
         padding-top: 35%;
         padding-left: 16px;
         position: relative;
+        margin-block: 0;
         margin-inline: auto;
         max-inline-size: 1400px;
         z-index: 1;
