--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -2,6 +2,8 @@
 @import "_museum-information";
 @import "_getting-here";
 @import "_accordion-section";
+@import "_anchor-navigation";
+@import "_events-listing";
 
 .fifty-fifty--background {
     background-color: #F4F3F0;
