--- a/resources/sass/exhibition/_details-component.scss
+++ b/resources/sass/exhibition/_details-component.scss
@@ -65,5 +65,6 @@
 .exhibition-details__card__details p[class] svg {
     display: block;
     margin-top: -6px;
-    width: 28px;
+    min-height: 28px;
+    min-width: 28px;
 }
