--- a/resources/sass/exhibition/_related-events.scss
+++ b/resources/sass/exhibition/_related-events.scss
@@ -1,6 +1,6 @@
 .related-events {
     background: #c4f1f5;
-    margin: 0 16px;
+    // margin: 0 16px;
     padding: 28px;
 
     @media screen and (min-width: 845px) {
