Remove container fluid class from related pages listing

--- a/resources/sass/exhibition/exhibition.scss
+++ b/resources/sass/exhibition/exhibition.scss
@@ -14,6 +14,7 @@
     padding-inline: 0;
 }
 
-.single-exhibition .image-gallery {
-    margin-inline: -30px;
+.single-exhibition .image-gallery,
+.single-exhibition .related {
+    margin-inline: -30px; 
 }
