Add field for parent page on subpages and apply that to related cards

--- a/resources/sass/exhibition/_quote.scss
+++ b/resources/sass/exhibition/_quote.scss
@@ -10,6 +10,9 @@
 .quote-body--green {
     background-color: #D6E4B4;
 }
+.quote-body--sky {
+    background-color: #C4F1F5;
+}
 .quote__image {
     max-inline-size: 50px;
 }
