Add CMS integration for whats-on component and generally CMS-up exhibition components
Add details-2025 blade file - may need debriefing with the team whether or not to retire details-2024

--- a/resources/sass/exhibition/_hero-2025.scss
+++ b/resources/sass/exhibition/_hero-2025.scss
@@ -3,7 +3,7 @@
 }
 
 .exhibition-hero-inner {
-    padding: 72px 0 40px;
+    padding: 0 0 40px;
 
     .hero-text {
         padding: 30px;
@@ -32,10 +32,21 @@
     .hero-image--sm {
         display: block;
     }
+
+    .hero__exhibition-date {
+        align-items: center;
+        display: flex;
+        gap: 1rem;
+        svg {
+            margin-top: -8px;
+        }
+    }
     
     .hero__exhibition-date p {
+        border-left: 1px solid #B50E5E;
         font-size: 24px;
         margin-top: 10px; /* May need tweaking once the proper fonts are in */
+        padding-left: 20px;
     }
     
     .hero__exhibition-price {
