--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -18,6 +18,13 @@
     padding-inline: 30px;
 }
 
+.visit-us-landing > div.container-home-cards {
+    padding-inline: 30px;
+    @media (min-width: 600px) {
+        padding-inline: 0;
+    }
+}
+
 .visit-us-landing > div:not(.full-width, .banner-component) .container {
     padding-inline: 0;
 }
