WIP: aments on visit-us page

--- a/resources/sass/visit-us/_accordion-section.scss
+++ b/resources/sass/visit-us/_accordion-section.scss
@@ -1,5 +1,6 @@
-.accordion-section .container {
-    margin-block: 60px;
+.accordion-section .wrapper {
+    max-inline-size: 1290px;
+    margin: 60px auto;
     @media (min-width: 600px) {
         display: flex;
         gap: 60px;
