--- a/resources/sass/visit-us/_anchor-navigation.scss
+++ b/resources/sass/visit-us/_anchor-navigation.scss
@@ -13,6 +13,15 @@
             text-decoration: none;
         }
     }
+
+    .wrapper {
+        max-width: 1290px;
+        margin: 0 auto;
+        padding: 0 16px;
+        @media (min-width: 1330px) {
+            padding-inline-start: 0;
+        }
+    }
 }
 
 .anchor-navigation--large {
@@ -25,9 +34,7 @@
         display: flex;
         gap: 1rem;
         padding-block: 1rem;
-        li a {
-            text-align: center;
-        }
+
         li a:first-child {
             padding-left: 0;
         }
