--- a/resources/sass/visit-us/_getting-here.scss
+++ b/resources/sass/visit-us/_getting-here.scss
@@ -2,14 +2,20 @@
     max-inline-size: 1290px;
     margin: 0 auto;
     margin-block: 30px;
+    padding-inline: clamp(16px, 5vw, 32px);
+
     @media (min-width: 600px) {
         margin-block: 40px;
+    }
+
+    @media (min-width: 1330px) {
+        padding-inline: 0;
     }
 }
 .getting-here__wrap {
     background-color: #E1DFEA;
     padding: 20px;
-    @media (min-width: 600px) {
+    @media (min-width: 1045px) {
         display: flex;
         gap: 60px;
     }
@@ -24,8 +30,8 @@
 .getting-here__details {
     margin-top: 1rem;
     h2 {
-        font-size: 44px;
-        font-weight: bold;
+        font-size: 2.75rem;
+        font-weight: 500;
         margin: 0;
     }
     h2 + p:first-of-type {
@@ -42,15 +48,21 @@
         svg {
             margin-right: 10px;
             margin-top: -4px;
+            max-width: 14px;
+            max-height: 20px;
+            width: 100%;
+            height: 100%;
         }
     }
     @media (min-width: 600px) {
         margin-top: 0;
     }
 }
-
 .getting-here__accordion {
     padding-top: 20px;
+}
+.getting-here__accordion .accordion-item:last-of-type {
+    border: 0;
 }
 
 .getting-here__accordion-links {
