WIP: visit us page styles

--- a/resources/sass/visit-us/_accordion-section.scss
+++ b/resources/sass/visit-us/_accordion-section.scss
@@ -29,8 +29,8 @@
 .accordion-section__text {
     margin-top: 24px;
     h2 {
-        font-size: 34px;
-        font-weight: bold;
+        font-size: 2.25rem;
+        font-weight: 500;
         margin: 0;
     }
     h2 + p {
