--- a/resources/sass/visit-us/_events-listing.scss
+++ b/resources/sass/visit-us/_events-listing.scss
@@ -10,8 +10,8 @@
     margin: 0 auto;
     // padding: clamp(2.5rem, 2.1429rem + 1.7857vw, 3.75rem); /* 40px -> 60px */
     h2 {
-        font-size: 2.125rem;
-        font-weight: bold;
+        font-size: 2.25rem;
+        font-weight: 500;
         margin: 0;
         @media (min-width: 600px) {
             padding-inline: 0;
