--- a/resources/sass/visit-us/_getting-here.scss
+++ b/resources/sass/visit-us/_getting-here.scss
@@ -30,24 +30,29 @@
 .getting-here__details {
     margin-top: 1rem;
     h2 {
-        font-size: 2.75rem;
+        font-size: 2.25rem;
         font-weight: 500;
         margin: 0;
+        margin-block-start: 20px;
+
+        @media (min-width: 1045px) {
+            margin-block-start: 0;
+        }
     }
     h2 + p:first-of-type {
-        margin-top: 20px;
-        margin-bottom: 0;
+        margin-block-start: 20px;
+        margin-block-end: 0;
     }
     h2 + p:first-of-type + p {
-        margin-top: 8px;
+        margin-block-start: 8px;
     }
     p.location {
         align-items: center;
         display: flex;
 
         svg {
-            margin-right: 10px;
-            margin-top: -4px;
+            margin-inline-end: 10px;
+            margin-block-start: -4px;
             max-width: 14px;
             max-height: 20px;
             width: 100%;
