--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -14,9 +14,14 @@
     }
 }
 
+.visit-us-landing a {
+    line-height: 23px;
+}
+
 .visit-us-landing .breadcrumb {
     max-inline-size: 1290px;
     margin: 0 auto;
+    margin-block-end: 0 !important;
 }
 
 .visit-us-landing .support-grid {
