--- a/resources/sass/visit-us/_anchor-navigation.scss
+++ b/resources/sass/visit-us/_anchor-navigation.scss
@@ -1,24 +1,34 @@
 #anchor-navigation-list a.active {
-    color: #B50E5E;
-    text-decoration: underline;
+    border-color: #B50E5E;
+    color:#B50E5E;
 }
+
 .anchor-navigation--large a.active {
+    border-color: #B50E5E;
     color: #B50E5E;
-    text-decoration: underline;
 }
+
 .anchor-navigation {
-    position: sticky;
-    z-index: 9999;
+
+    position: static;
+
+    @media (min-height: 480px) {
+        position: sticky;
+        z-index: 1029;
+    }
+
     ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         li a {
             color: black;
-            display: block;
+            display: inline-block;
+            width: max-content;
             font-weight: 500;
             padding: 10px;
             text-decoration: none;
+            border-bottom: 2px solid transparent;
         }
     }
 
@@ -37,13 +47,19 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
     display: none;
     top: 90px;
-    z-index: 9999;
+    z-index: 1029;
     ul {
         align-items: baseline;
         display: flex;
         gap: 1rem;
         padding-block: 1rem;
-
+        li a {
+            border-bottom: 2px solid transparent;
+            padding: 8px 10px 4px 10px;
+            font-weight: 600;
+            font-size: 1rem;
+            line-height: 23px;
+        }
         li a:first-child {
             padding-left: 0;
         }
@@ -54,11 +70,11 @@
 }
 
 .anchor-navigation--small {
-    background-color: #F4F3F0;
+    background-color: white;
     display: block;
     top: 90px;
     padding: 19px 11px;
-
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
     div:first-child {
         padding: 0;
     }
