--- a/resources/sass/visit-us/_events-listing.scss
+++ b/resources/sass/visit-us/_events-listing.scss
@@ -68,10 +68,6 @@
             font-weight: bold;
             margin: 0;
         }
-        p {
-            font-size: 1.0625rem;
-            margin-top: 0.75rem;
-        }
 
         a.tag {
             text-decoration: none;
@@ -80,6 +76,22 @@
 
         a.tag:hover {
             background-color: darken(#F4F3F0, 10%);
+        }
+
+        p {
+            font-size: 1.0625rem;
+            margin-top: 0.75rem;
+        }
+
+        p:last-child {
+            font-size: 0.875rem;
+        }
+
+        p.tag {
+            margin-top: 0;
+            font-size: 1rem;
+            line-height: 29px;
+            padding: 4px 12px;
         }
     }
 }
