--- a/resources/sass/visit-us/visit-us.scss
+++ b/resources/sass/visit-us/visit-us.scss
@@ -18,7 +18,7 @@
     line-height: 23px;
 }
 
-.visit-us-landing .breadcrumb {
+.breadcrumb {
     max-inline-size: 1290px;
     margin: 0 auto;
     margin-block-end: 0 !important;
